apply fluid change

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                             <!-- Special Offers -->
                             <ul class="navbar-nav d-flex flex-row flex-wrap justify-content-start mb-0">
                                 <li class="nav-item me-2 me-lg-3">
-                                    <a class="nav-link text-danger fw-bold px-2 py-1" href="#">Specials</a>
+                                    <a class="nav-link text-danger fw-semibold px-2 py-1" href="#">Specials</a>
                                 </li>
                                 <li class="nav-item me-2 me-lg-3">
                                     <a class="nav-link text-dark px-2 py-1" href="#">Best Sellers</a>
@@ -210,7 +210,7 @@
                                     <a class="nav-link text-dark px-2 py-1" href="#">New</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-success fw-bold px-2 py-1" href="#">Wellness Hub</a>
+                                    <a class="nav-link text-success fw-semibold px-2 py-1" href="#">Wellness Hub</a>
                                 </li>
                             </ul>
                         </div>
@@ -475,7 +475,7 @@
 
     <!-- Rewards Banner -->
     <div class="container-fluid">
-        <div style="background: linear-gradient(135deg, #c8e6c9, #a5d6a7); padding: 12px 0; text-align: center; border-radius: 8px; margin-bottom: 30px;">
+        <div style="background: linear-gradient(135deg, #c8e6c9, #a5d6a7); padding: 12px 0; text-align: center; border-radius: 8px;">
             <a >
                 <img src="assets/images/footer/iHerb Rewards.png" alt="iHerb Rewards" style="height: 20px; vertical-align: middle;">
             </a>
