--- a/index.html
+++ b/index.html
@@ -293,6 +293,11 @@
         <!-- Shop by category section will be rendered here -->
     </div>
     
+    <!-- Selected for You Section -->
+    <div id="selectedForYouSection">
+        <!-- Selected for you section will be rendered here -->
+    </div>
+    
     <!-- Trending Products Carousel -->
     <div id="trendingProducts">
         <!-- Trending products carousel will be rendered here -->
